1.2.0-alpha3 unreleased
=======================

 * Set ATFile's file field to be 'searchable'.  This means that it'll
   be indexed correctly including transforms.  If you don't want this,
   set your own 'index_method', or set 'searchable' to False in your
   code.
   [nouri]

 * Extinguished last occurrences of old portal_status_message in URL support.
   [hannosch]

 * Merged plip174-reusable-i18n branch. Normalization of uploaded file names
   is now based on plone.i18n.normalizer.
   [hannosch]

1.2.0-alpha2 2007-02-08
=======================

 * Removed various obsolete class attributes from content type classes. These
   are managed by GenericSetup profiles now.
   [hannosch]

 * Updated installation tests, as ATCT is no longer 'quickinstalled' anymore.
   [hannosch]

 * removed schemata='default' for allowDiscussion field in finalizeATCTSchema.
   It makes no sense and prevents customization by patching.
   [ender]

 * Moved fields of content types into several schemas.
   [fschulze]

 * Removed properties tab, as we now use the all-schemas-on-one-page feature
   of Archetypes.
   [fschulze]

 * Some general test cleanup in order to make the test output readable.
   [hannosch]

 * Removed the view alias of index.html for all standard content types. This
   makes it possible to create and upload files called index.html to the
   site, which is quite common when batch importing old sites into the site.
   As someone might rely on the former behaviour, we do not migrate
   any existing type information. This closes
   http://dev.plone.org/plone/ticket/4837.
   [hannosch]

 * Got rid of last remnants of zLOG. Grep is our friend!
   [stefan]

1.2.0-alpha1 2006-10-02
=======================

 * Fixed some minor i18n issues.
   [hannosch]

 * Reworked i18n of Python scripts to use the new MessageFactory and based
   portal status messages on the statusmessages product.
   [hannosch]

 * Changed criteria definitions to use Zope3 Messages for localizing